--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "negotiator": "^0.6.1",
     "parse-link-header": "^0.4.1",
     "setimmediate": "^1.0.4",
-    "sparqljs": "^1.3.0",
+    "sparqljs": "git://github.com/chrvog/Sparql.js.git#master",
     "uritemplate": "^0.3.0"
   },
   "optionalDependencies": {
